--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row row_area my-3">
+    <div class="container ">
+        <div class="row row_area my-3 ">
             <div class="col my-2">
                 <div class="nav">
                     <p class="display-4">GitHub Finder</p>
                 </div>
-            <div class="col col_area ">
-                <form action="#">
+            <div class="col col_area container_class">
+                <form action="#" class="search_box">
                     <input type="text" name="search" id="git_search" class="form-control" placeholder="Enter your GitHub profile Name">
                     <br>
                     <input type="button" value="Search" class="btn btn-outline-info" id="searchMe">
